# resvg-plugin

./: .gitmodules  CMakeLists.txt  README.md
image_formats/: CMakeLists.txt  svg.json
image_formats/src/: svg_io_handler.cpp  svg_io_handler.h  svg_plugin.cpp  svg_plugin.h
imageformats/: CMakeLists.txt
imageformats/src/: svg_io_handler.cpp  svg_io_handler.h  svg_plugin.cpp  svg_plugin.h
rust/: CMakeLists.txt
rust/resvg/: README.rusty
rust/resvg/c-api/: ResvgQt.h
rust/resvg/tools/explorer-thumbnailer/src/: error.rs  thumbnail_provider.rs  utils.rs
tests/: CMakeLists.txt  images.qrc
tests/image_formats/: main.cpp
